# wlen_project

./: README.md
backend/: Cargo.toml  README.md  host.json
backend/.cargo/: config.toml
backend/src/: main.rs
beacon/: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
beacon/boards/arm/holyiot_21014/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.c  board.cmake  holyiot_21014-pinctrl.dtsi  holyiot_21014.dts  holyiot_21014.yaml  holyiot_21014_defconfig
beacon/src/: digital_sign.c  digital_sign.h  main.c
gateway/: README.md  pubspec.yaml
gateway/android/app/: build.gradle
gateway/android/app/src/main/: AndroidManifest.xml
gateway/android/app/src/main/kotlin/io/github/danielstuart14/gateway/: MainActivity.kt
gateway/android/app/src/profile/: AndroidManifest.xml
gateway/ios/Runner/: Info.plist
gateway/ios/Runner.xcodeproj/: project.pbxproj
gateway/lib/: beacon.dart  bluetooth.dart  gnss.dart  main.dart  request.dart
