[package]
name = "wlen-server"
version = "0.1.0"
authors = ["Daniel Stuart"]
edition = "2021"

[env]
DB_URI = "mongodb://..."

[dependencies]
hyper = {version = "0.14.20", features = ["full"]}
tokio = { version =  "1.20.0", features = ["full"] }
p256 = { version = "0.11.1", features = ["ecdsa"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
hex = "0.4.3"
mongodb = "2.2.2"
chrono = "0.4.19"
bson = {version = "2.3.0", features = ["chrono-0_4"]}