[package]
name = "wlen-server"
version = "0.1.1"
authors = ["Daniel Stuart"]
edition = "2021"

[dependencies]
hyper = {version = "0.14.27", features = ["full"]}
tokio = { version =  "1.32.0", features = ["full"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
hex = "0.4.3"
mongodb = "2.7.0"
chrono = "0.4.31"
bson = {version = "2.7.0", features = ["chrono-0_4"]}
